--- a/templates/index.html
+++ b/templates/index.html
@@ -3,5 +3,13 @@
     <head></head>
     <body>
         <h1>Incendios en España entre 2004 y 2014</h1>
+        <table border=1 cellpadding=7>
+            <tr>
+                <th>Comunidad</th>
+            </tr>
+            
+            {{ object_list }}
+            
+        </table>
     </body>
 </html>
