--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,53 @@
 <!doctype html>
 <html lang="es">
-    <head></head>
+    <head>
+        <link rel="stylesheet" href="/libs/leaflet.css" />
+        <script type="text/javascript" src="/libs/leaflet.js?2"></script>
+    </head>
     <body>
         <h1>Incendios en España entre 2004 y 2014</h1>
+		<div id="map" style="width:100%; height:300px;"></div>
+
+	    <script type="text/javascript">
+
+  	      var map = L.map('map').setView([40.2085,-3.713], 6);
+	      var mapquestLayer = new L.TileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
+	          maxZoom: 18,
+	          attribution: 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>,<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors.',
+	          subdomains: ['otile1','otile2','otile3','otile4']
+	      });
+	      map.addLayer(mapquestLayer);
+
+	      var data = {
+	        "type": "FeatureCollection",
+	        "features": [
+	          {% for obj in object_list %}
+	          {
+	            "type": "Feature",
+	            "properties": {
+	              "causa": "{{ obj['CAUSA'].decode('UTF-8') }}",
+	              "id": "{{ obj['IDPIF'] }}"
+	            },
+	            "geometry": {
+	              "type": "Point",
+	              "coordinates": [{{ obj['LONGITUD'] }}, {{ obj['LATITUD'] }}]
+	            }
+	          }{% if not loop.last %},{% endif %}
+	          {% endfor %}
+	        ]
+	      };
+	      var dataLayer = L.geoJson(data, {
+                onEachFeature: function(feature, layer) {
+                    layer.bindPopup(
+                        '<a href="' + feature.properties.id + '/">' +
+                            feature.properties.causa +
+                        '</a>'
+                    );
+                }
+            });
+	      map.addLayer(dataLayer);
+	    </script>
+
 	    <table border=1 cellpadding=7>
 	        <tr>
 	            <th>Superficie Forestal Quemada</th>
