probando repositorio remoto

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
     <head>
         <link rel="stylesheet" href="/libs/leaflet.css" />
-        <script type="text/javascript" src="/libs/leaflet.js?2"></script>
+        <script type="text/javascript" src="/libs/leaflet.js?"></script>
     </head>
     <body>
         <h1>Incendios en España entre 2004 y 2014</h1>
