--- a/templates/detail.html
+++ b/templates/detail.html
@@ -1,38 +1,42 @@
 <!doctype html>
 <html lang="es">
     <head>
-		<meta name="Incendios en España"  content="text/html;"
-			http-equiv="content-type" charset="utf-8">
+		<meta name="Incendios en España"  content="text/html;" http-equiv="content-type" charset="utf-8">
+		<title>Incendio de {{ object['MUNICIPIO'].decode('UTF-8') }}, {{ object['FECHA'] }}</title>
+		
         <link rel="stylesheet" href="/libs/leaflet.css" />
-        <script type="text/javascript" src="/libs/leaflet.js?2"></script>
+        
 	</head>
-    <body>
+    <body class="pageDetail">
         <h1>Incendio de {{ object['COMUNIDAD'].decode('UTF-8') }}</h1>
-            <div id="map" style="width:100%; height:300px;"></div>
-	        <p>
-    	        Comunidad: {{ object['COMUNIDAD'].decode('UTF-8') }}<br>
-    			Provincia: {{ object['PROVINCIA'].decode('UTF-8') }}<br>
-    			Comarca: {{ object['COMARCA'].decode('UTF-8') }}<br>
-    			Municipio {{ object['MUNICIPIO'].decode('UTF-8') }}<br><br>
-    			Superficie forestal quemada: {{ object['SUPQUEMADA'] }}ha<br>
-    			Muertos: {{ object['MUERTOS'] }}<br>
-    			Heridos: {{ object['HERIDOS'] }}<br>
-    			Fecha: {{ object['FECHA'] }}.<br>
-    			Tiempo en controlarse: {{ object['TIME_CTRL'] }} minutos<br>
-    			Tiempo en extinguirse: {{ object['TIME_EXT'] }} minutos<br>
-    			Causa: {{ object['CAUSA'].decode('UTF-8') }}.<br>
-    			Extinción mediante: {{ object['PERSONAL'] }} personas, {{ object['PESADOS'] }} vehiculos pesados y {{ object['AEREOS'] }} medios aereos.
-			</p>
-			
-		<script type="text/javascript">
-	        var map = L.map('map').setView([{{ object['LATITUD'] }}, {{ object['LONGITUD'] }}], 10);
-	        var mapquestLayer = new L.TileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
-	            maxZoom: 18,
-	            attribution: 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>,<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors.',
-	            subdomains: ['otile1','otile2','otile3','otile4']
-	        });
-	        map.addLayer(mapquestLayer);
-	        var marker = L.marker([{{ object['LATITUD'] }}, {{ object['LONGITUD'] }}]).addTo(map);
+        
+        <div id="map" style="width:100%; height:300px;"></div>
+        
+        <p>
+	        Comunidad: {{ object['COMUNIDAD'].decode('UTF-8') }}<br>
+			Provincia: {{ object['PROVINCIA'].decode('UTF-8') }}<br>
+			Comarca: {{ object['COMARCA'].decode('UTF-8') }}<br>
+			Municipio {{ object['MUNICIPIO'].decode('UTF-8') }}<br><br>
+			Superficie forestal quemada: {{ object['SUPQUEMADA'] }}ha<br>
+			Muertos: {{ object['MUERTOS'] }}<br>
+			Heridos: {{ object['HERIDOS'] }}<br>
+			Fecha: {{ object['FECHA'] }}.<br>
+			Tiempo en controlarse: {{ object['TIME_CTRL'] }} minutos<br>
+			Tiempo en extinguirse: {{ object['TIME_EXT'] }} minutos<br>
+			Causa: {{ object['CAUSA'].decode('UTF-8') }}.<br>
+			Extinción mediante: {{ object['PERSONAL'] }} personas, {{ object['PESADOS'] }} vehiculos pesados y {{ object['AEREOS'] }} medios aereos.
+		</p>
+	    
+	    <script>
+window.detail = {
+	LATITUD: {{ object['LATITUD'] }},
+	LONGITUD: {{ object['LONGITUD'] }}
+};
 	    </script>
+
+     	<script type="text/javascript" src="/libs/leaflet.js?"></script>
+     	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+     	<script type="text/javascript" src="/libs/myMaps.js"></script>
+     
     </body>
 </html>
