--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,8 @@
 		
         <link rel="stylesheet" href="/libs/leaflet.css" />
     </head>
-    <body>
+    <body class="pageHome">
+
         <h1>Incendios en España entre 2004 y 2014</h1>
         
 		<div id="map" style="width:100%; height:300px;"></div>
@@ -16,71 +17,9 @@
 	    	<a href="{{ obj['IDPIF'] }}/">Incendio de fecha {{ obj['FECHA'] }} en {{ obj['PROVINCIA'].decode('UTF-8') }}</a><br>
 	    {% endfor %}
 
-
      	<script type="text/javascript" src="/libs/leaflet.js?"></script>
      	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+     	<script type="text/javascript" src="/libs/myMaps.js"></script>
      
-	    <script type="text/javascript">
-
-if($('#map').length) {
-	$.ajax('data.json')
-		.done(function(data){
-			if(!window.L) return $('#map').append('<h2>No se pudo dibujar el mapa.<h2>');
-			
-			var puntos = jQuery.parseJSON(data);
-			
-			var map = mapInit('map', [40.2085,-3.713], 6);
-			
-			var geoJSON = {
-			    "type": "FeatureCollection",
-			    "features": []
-			};
-			
-			for (var i = puntos.length - 1; i >= 0; i--) {
-				geoJSON.features.push({
-					"type": "Feature",
-			        "properties": {
-			          "causa": puntos[i]['CAUSA'],
-			          "id": puntos[i]['IDPIF']
-			        },
-			        "geometry": {
-			          "type": "Point",
-			          "coordinates": [puntos[i]['LONGITUD'], puntos[i]['LATITUD']]
-			        }
-				});
-			}
-			
-			var dataLayer = L.geoJson(geoJSON, {
-	            onEachFeature: function(feature, layer) {
-	                layer.bindPopup(
-	                    '<a href="' + feature.properties.id + '/">' +
-	                        feature.properties.causa +
-	                    '</a>'
-	                );
-	            }
-	        });
-		    map.addLayer(dataLayer);
-			
-		})
-		.fail(function(){
-			$('#map').append('<h2>No se pudieron obtener los datos<h2>');
-		})
-		
-		
-};
-
-        
-function mapInit(id, position, zoom) {
-  	  var map = L.map(id).setView(position, zoom);
-      var mapquestLayer = new L.TileLayer('http://{s}.mqcdn.com/tiles/1.0.0/map/{z}/{x}/{y}.png', {
-          maxZoom: 18,
-          attribution: 'Data, imagery and map information provided by <a href="http://open.mapquest.co.uk" target="_blank">MapQuest</a>,<a href="http://www.openstreetmap.org/" target="_blank">OpenStreetMap</a> and contributors.',
-          subdomains: ['otile1','otile2','otile3','otile4']
-      });
-      map.addLayer(mapquestLayer);
-      return map;
-}
-
-	    </script>
     </body>
 </html>
