--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,6 +6,9 @@
 		
         <link rel="stylesheet" href="/libs/leaflet.css" />
         
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+	
 	</head>
     <body class="pageDetail">
         <h1>Incendio de {{ object['COMUNIDAD'].decode('UTF-8') }}</h1>
@@ -36,6 +39,7 @@ window.detail = {
 
      	<script type="text/javascript" src="/libs/leaflet.js?"></script>
      	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
      	<script type="text/javascript" src="/libs/myMaps.js"></script>
      
     </body>
