--- a/templates/index.html
+++ b/templates/index.html
@@ -5,50 +5,61 @@
     	<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		
         <link rel="stylesheet" href="/libs/leaflet.css" />
         
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.1/css/theme.blackice.min.css">
 	
     </head>
     <body class="pageHome">
-
+		
         <h1>Incendios en España entre 2004 y 2014</h1>
         
 		<div id="map" style="width:100%; height:300px;"></div>
 
-	    <table border=1 cellpadding=7>
-	        <tr>
-	            <th>Superficie Quemada</th>
-	            <th>Fecha</th>
-	            <th>Muertos</th>
-	            <th>Heridos</th>
-	            <th>Comunidad</th>
-	            <th>Provincia</th>
-	            <th>Comarca</th>
-	            <th>Causa</th>
-	            <th>Perdidas</th>
-	        </tr>
-	        
-		    {% for obj in object_list %}
+	    <table id="table" class="table table-striped table-hover table-responsive" style="display: block;">
+  			<thead>
 		        <tr>
-		            <td>{{ obj['SUPQUEMADA'] }}</td>
-		            <td><a href="{{ obj['IDPIF'] }}/">{{ obj['FECHA'] }}</a></td>
-		            <td>{{ obj['MUERTOS'] }}</td>
-		            <td>{{ obj['HERIDOS'] }}</td>
-		            <td>{{ obj['COMUNIDAD'].decode('UTF-8') }}</td>
-		            <td>{{ obj['PROVINCIA'].decode('UTF-8') }}</td>
-		            <td>{{ obj['COMARCA'].decode('UTF-8') }}</td>
-		            <td>{{ obj['CAUSA'].decode('UTF-8')  }}</td>
-		            <td>{{ obj['PERDIDAS'] }}</td>
+		            <th>Superficie Quemada</th>
+		            <th>Fecha</th>
+		            <th>Muertos</th>
+		            <th>Heridos</th>
+		            <th>Comunidad</th>
+		            <th>Provincia</th>
+		            <th>Comarca</th>
+		            <th>Causa</th>
+		            <th>Perdidas</th>
 		        </tr>
-		    {% endfor %}
+  			</thead>
+	        
+  			<tbody>
+			    {% for obj in object_list | sort(attribute='FECHA') %}
+			        <tr>
+			            <td>{{ obj['SUPQUEMADA'] }}</td>
+			            <td><a href="{{ obj['IDPIF'] }}/">{{ obj['FECHA'] }}</a></td>
+			            <td>{{ obj['MUERTOS'] }}</td>
+			            <td>{{ obj['HERIDOS'] }}</td>
+			            <td>{{ obj['COMUNIDAD'].decode('UTF-8') }}</td>
+			            <td>{{ obj['PROVINCIA'].decode('UTF-8') }}</td>
+			            <td>{{ obj['COMARCA'].decode('UTF-8') }}</td>
+			            <td>{{ obj['CAUSA'].decode('UTF-8')  }}</td>
+			            <td>{{ obj['PERDIDAS'] }}</td>
+			        </tr>
+			    {% endfor %}
+			 </tbody>
 		</table>
+		
+	</div>
 
-     	<script type="text/javascript" src="/libs/leaflet.js?"></script>
-     	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
-     	<script type="text/javascript" src="/libs/myMaps.js"></script>
+ 	<script type="text/javascript" src="/libs/leaflet.js?"></script>
+ 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
+ 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery.tablesorter/2.26.1/js/jquery.tablesorter.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+	
+ 	<script type="text/javascript" src="/libs/myMaps.js"></script>
      
     </body>
 </html>
