--- a/templates/index.html
+++ b/templates/index.html
@@ -24,37 +24,51 @@
   			<thead>
 		        <tr>
 		            <th></th>
-		            <th>Superficie Quemada</th>
-		            <th>Fecha</th>
-		            <th>Muertos</th>
-		            <th>Heridos</th>
+		            <th>Municipio</th>
 		            <th>Comunidad</th>
 		            <th>Provincia</th>
-		            <th>Comarca</th>
-		            <th>Causa</th>
-		            <th>Perdidas</th>
+		            <th>Superficie Quemada</th>
+		            <th>Fecha</th>
+		            <th>Víctimas</th>
 		        </tr>
   			</thead>
 	        
   			<tbody>
 			    {% for obj in object_list | sort(attribute='FECHA') %}
 			        <tr>
-			            <td><a class="btn btn-primary" href="{{ obj['IDPIF'] }}/">Detalle</a></td>
-			            <td>{{ obj['SUPQUEMADA'] }}</td>
-			            <td>{{ obj['FECHA'] }}</td>
-			            <td>{{ obj['MUERTOS'] }}</td>
-			            <td>{{ obj['HERIDOS'] }}</td>
+			            <td><a class="btn-incendio btn btn-primary" data-incendio="{{ obj['IDPIF'] }}" href="{{ obj['IDPIF'] }}/">Detalle</a></td>
+			            <td>{{ obj['MUNICIPIO'].decode('UTF-8') }}</td>
 			            <td>{{ obj['COMUNIDAD'].decode('UTF-8') }}</td>
 			            <td>{{ obj['PROVINCIA'].decode('UTF-8') }}</td>
-			            <td>{{ obj['COMARCA'].decode('UTF-8') }}</td>
-			            <td>{{ obj['CAUSA'].decode('UTF-8')  }}</td>
-			            <td>{{ obj['PERDIDAS'] }}</td>
+			            <td>{{ obj['SUPQUEMADA'] }} m2</td>
+			            <td>{{ obj['FECHA'] }}</td>
+			            <td>{{ obj['MUERTOS'] }}</td>
 			        </tr>
 			    {% endfor %}
 			 </tbody>
 		</table>
 		
 	</div>
+	
+<div class="modal" id="myModal" tabindex="-1" role="dialog"
+     aria-labelledby="myModalLabel1" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title" id="myModalLabel1">Modal title</h4>
+      </div>
+      <div class="modal-body">
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+      </div>
+    </div>
+  </div>
+</div>
 
  	<script type="text/javascript" src="/libs/leaflet.js?"></script>
  	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
