--- a/templates/index.html
+++ b/templates/index.html
@@ -64,6 +64,7 @@
         
       </div>
       <div class="modal-footer">
+		<a href="#" class="btn btn-primary btn-detalle">Detalle</a>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
       </div>
     </div>
