--- a/templates/detail.html
+++ b/templates/detail.html
@@ -6,27 +6,57 @@
 		
         <link rel="stylesheet" href="/libs/leaflet.css" />
         
+        		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+		
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
+		<style type="text/css">
+.dl-horizontal dt { text-overflow: inherit; }
+			.container-fluid { max-width: 1000px; }
+		</style>
 	</head>
     <body class="pageDetail">
-        <h1>Incendio de {{ object['COMUNIDAD'].decode('UTF-8') }}</h1>
-        
-        <div id="map" style="width:100%; height:300px;"></div>
-        
-        <p>
-	        Comunidad: {{ object['COMUNIDAD'].decode('UTF-8') }}<br>
-			Provincia: {{ object['PROVINCIA'].decode('UTF-8') }}<br>
-			Comarca: {{ object['COMARCA'].decode('UTF-8') }}<br>
-			Municipio {{ object['MUNICIPIO'].decode('UTF-8') }}<br><br>
-			Superficie forestal quemada: {{ object['SUPQUEMADA'] }}ha<br>
-			Muertos: {{ object['MUERTOS'] }}<br>
-			Heridos: {{ object['HERIDOS'] }}<br>
-			Fecha: {{ object['FECHA'] }}.<br>
-			Tiempo en controlarse: {{ object['TIME_CTRL'] }} minutos<br>
-			Tiempo en extinguirse: {{ object['TIME_EXT'] }} minutos<br>
-			Causa: {{ object['CAUSA'].decode('UTF-8') }}.<br>
-			Extinción mediante: {{ object['PERSONAL'] }} personas, {{ object['PESADOS'] }} vehiculos pesados y {{ object['AEREOS'] }} medios aereos.
-		</p>
-	    
+    	<div class="container-fluid">
+    		<div class="row">
+    			<h1>Incendio de {{ object['COMUNIDAD'].decode('UTF-8') }}</h1>	
+	        	
+	        	<div class="col-sm-8">
+			        <dl class="dl-horizontal">
+			        	<dt>Municipio:</dt>
+			        	<dd>{{ object['MUNICIPIO'].decode('UTF-8') }}</dd>
+			        	<dt>Comarca:</dt>
+			        	<dd>{{ object['COMARCA'].decode('UTF-8') }}</dd>
+			        	<dt>Provincia</dt>
+			        	<dd>{{ object['PROVINCIA'].decode('UTF-8') }}</dd>
+			        	<dt>Comunidad:</dt>
+			        	<dd>{{ object['COMUNIDAD'].decode('UTF-8') }}</dd>
+			        	<dt>Superficie forestal quemada:</dt>
+			        	<dd>{{ object['SUPQUEMADA'] }}ha</dd>
+			        </dl>
+	        		
+	        	</div>
+	        	<div class="col-sm-4">
+		        	<div id="map" style="width:100%; height:300px;"></div>
+		        </div>
+	        </div>
+	        
+	        
+	 <!--       
+	        <p>
+				Muertos: {{ object['MUERTOS'] }}<br>
+				Heridos: {{ object['HERIDOS'] }}<br>
+				Fecha: {{ object['FECHA'] }}.<br>
+				Tiempo en controlarse: {{ object['TIME_CTRL'] }} minutos<br>
+				Tiempo en extinguirse: {{ object['TIME_EXT'] }} minutos<br>
+				Causa: {{ object['CAUSA'].decode('UTF-8') }}.<br>
+				Extinción mediante: {{ object['PERSONAL'] }} personas, {{ object['PESADOS'] }} vehiculos pesados y {{ object['AEREOS'] }} medios aereos.
+			</p>-->
+		</div>
 	    <script>
 window.detail = {
 	LATITUD: {{ object['LATITUD'] }},
