--- a/templates/index.html
+++ b/templates/index.html
@@ -6,16 +6,34 @@
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
 		
         <link rel="stylesheet" href="/libs/leaflet.css" />
+		
+		<!-- Latest compiled and minified CSS -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+		
+		<!-- Optional theme -->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
+		
+		<!-- Latest compiled and minified JavaScript -->
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+		
+		<style type="text/css">
+			.container-fluid { max-width: 1000px; }
+		</style>
     </head>
     <body class="pageHome">
-
-        <h1>Incendios en España entre 2004 y 2014</h1>
-        
-		<div id="map" style="width:100%; height:300px;"></div>
-
-	    {% for obj in object_list %}
-	    	<a href="{{ obj['IDPIF'] }}/">Incendio de fecha {{ obj['FECHA'] }} en {{ obj['PROVINCIA'].decode('UTF-8') }}</a><br>
-	    {% endfor %}
+    	<div class="container-fluid">
+			<div class="jumbotron">
+	        	<h1>Incendios en España entre 2004 y 2014</h1>
+			</div>
+	    </div>
+	    
+			<div id="map" style="width:100%; height:300px;"></div>
+	
+    	<div class="container-fluid">
+		    {% for obj in object_list %}
+		    	<a href="{{ obj['IDPIF'] }}/">Incendio de fecha {{ obj['FECHA'] }} en {{ obj['PROVINCIA'].decode('UTF-8') }}</a><br>
+		    {% endfor %}
+	    </div>
 
      	<script type="text/javascript" src="/libs/leaflet.js?"></script>
      	<script type="text/javascript" src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
