ajustes durante el taller

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,9 @@
 			
 		</div>
         
-		<div id="map"></div><br>
+		<div id="map"></div>
+		
+		<br>
 
 		<div class="container">
 			<h2>Últimos incencios</h2>
